# tasks

./: .gitignore  async_web.py  lru.py  meta_created_at.py  parallel_processing.py  permission.py  pyproject.toml  web.py
task_singleton/: singleton_class.py  singleton_meta.py  singleton_module.py
task_singleton/singleton/: singleton.py
week_1/: async_web.py  lru.py  meta_created_at.py  parallel_processing.py  permission.py  web.py
week_1/task_singleton/: singleton_class.py  singleton_meta.py  singleton_module.py
week_1/task_singleton/singleton/: singleton.py
week_2/: distributed_lock.py  rate_limiter.py  redis_queue.py  task_q.py
week_2/book_store/api/: models.py  serializers.py  urls.py  views.py
week_2/book_store/api/migrations/: 0001_initial.py
week_2/book_store/book_store/: settings.py  urls.py
